add api for comments and make some ui adjustments
